--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,32 @@
-div {
-    color: white;
-    background-color: black;
+h1 {
+    color: blue;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-p {
+h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
     color: red;
+    font-size: 20px;
+}
+
+img {
+    width: auto;
+    height: 512px;
+}
+
+.ingredients {
+    color: black;
+}
+
+.description {
+    color: red;
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 25px;
 }
